# VenvManager

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  docker-compose.dev.yml  docker-compose.prod.yml  justfile  justfile.prod  makefile  pyproject.toml  run.py
app/: __init__.py  config.py  load_env.py
app/model/: cluster.py  docker_env.py  environment.py  networking.py  status.py  vm_env.py
app/models/: __init__.py  environment.py
app/routes/: api.py  creator.py  main.py
app/runtime/: __init__.py  cluster.py  docker_env.py  environment.py  vm_env.py
app/scripts/: remove_bridge  setup_bridge
app/services/: clients.py  cluster.py  creator.py  environment.py  environment_catalog.py  ports.py  registry.py  repository.py
app/templates/: base.html  clusters.html  environments.html  index.html
app/templates/creator/: cluster.html  docker.html  vm.html
app/utils/: logging.py  networking.py  split_ports.py  vm_overlay.py
fixtures/: cluster_dev.json
migrations/versions/: 663c2c8c229f_.py  67296f29cca8_.py  8848fb491bda_.py  b23cde15b056_.py  ba88b3c77517_init_models.py  d9138f5c4981_.py  ea1bb58276f9_.py
