[project]
name = "venvmanager"
version = "0.1.0"
description = "A dynamic system for managing virtual environments"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.1",
    "dotenv>=0.9.9",
    "gunicorn==23.0.0",
    "docker==7.1.0",
    "libvirt-python==11.6.0",
    "flask-sqlalchemy==3.1.1",
    "psycopg2-binary==2.9.10",
    "flask-migrate==4.1.0",
    "psutil==7.0.0",
    "flask-cors==6.0.2"
]
